--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,17 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
+	annotationProcessor 'com.github.therapi:therapi-runtime-javadoc-scribe:0.13.0'
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+	// https://mvnrepository.com/artifact/io.springfox/springfox-boot-starter
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.8'
+	implementation 'org.springdoc:springdoc-openapi-data-rest:1.6.8'
+	implementation 'org.springdoc:springdoc-openapi-javadoc:1.6.8'
+	implementation 'com.github.therapi:therapi-runtime-javadoc-scribe:0.13.0'
+
 	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
