--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,4 +4,4 @@ spring:
     url: ${msserverdb_endpoint_url} #jdbc:sqlserver://sqlsrv\\sqlexpress;databaseName=customer
     username: ${msserverdb_endpoint_username}
     password: ${msserverdb_endpoint_password}
-    
+    driverClassName: com.microsoft.sqlserver.jdbc.SQLServerDriver
