--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,8 @@
 ---
 spring:
   datasource:
-    url: ${msserverdb_endpoint_url} #jdbc:sqlserver://sqlsrv\\sqlexpress;databaseName=customer
-    username: ${msserverdb_endpoint_username}
-    password: ${msserverdb_endpoint_password}
+    url: ${msserverdb_endpoint_url} #jdbc:sqlserver://localhost;databaseName=testschema
+    username: ${msserverdb_endpoint_username} #test
+    password: ${msserverdb_endpoint_password} #test
     driverClassName: com.microsoft.sqlserver.jdbc.SQLServerDriver
+
