--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 ---
 spring:
   datasource:
-    url: ${msserverdb_endpoint_url} #jdbc:sqlserver://localhost;databaseName=testschema
-    username: ${msserverdb_endpoint_username} #test
-    password: ${msserverdb_endpoint_password} #test
+    url: jdbc:sqlserver://host.docker.internal;databaseName=testschema #${msserverdb_endpoint_url} #jdbc:sqlserver://sqlsrv\\sqlexpress;databaseName=customer
+    username: test #${msserverdb_endpoint_username}
+    password: test #${msserverdb_endpoint_password}
     driverClassName: com.microsoft.sqlserver.jdbc.SQLServerDriver
 
